Improve texts by GTP5 and start the latex report

--- a/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
@@ -5,9 +5,9 @@
    "id": "3ab06da8",
    "metadata": {},
    "source": [
-    "# Sentence Splitter using an Embedding Model\n",
+    "# Sentence splitter using an embedding model\n",
     "\n",
-    "Install the required libraries in the virtual environment:"
+    "Install the required libraries in your virtual environment:"
    ]
   },
   {
@@ -26,9 +26,9 @@
    "id": "7ffd513f",
    "metadata": {},
    "source": [
-    "Let's import everything we need:\n",
+    "Import all required libraries.\n",
     "\n",
-    "(doing it at the beginning to fail fast in case we need something else to install in our virtual environment)"
+    "We do this first to fail fast in case additional packages need to be installed in the virtual environment."
    ]
   },
   {
@@ -56,7 +56,9 @@
    "id": "b6713e6e",
    "metadata": {},
    "source": [
-    "First of all, let's verify we support accelerator:"
+    "Verify that a hardware accelerator is available.\n",
+    "\n",
+    "This notebook requires a GPU."
    ]
   },
   {
@@ -74,7 +76,7 @@
    "id": "839d5b93",
    "metadata": {},
    "source": [
-    "Before doing everything else try to make this run as much as deterministic as possible:"
+    "Before proceeding, make the run as deterministic as possible:"
    ]
   },
   {
@@ -104,18 +106,17 @@
    "id": "22155736",
    "metadata": {},
    "source": [
-    "## PART ONE: Create the dataset\n",
+    "## Part one: Create the dataset\n",
     "\n",
-    "In this section we're going to create a standard Hugging Face dataset from the `CSV` files: `data/manzoni_dev_tokens.csv` and `data/manzoni_train_tokens.csv`.\n",
+    "In this section, we create a standard Hugging Face dataset from the CSV files: `data/manzoni_dev_tokens.csv` and `data/manzoni_train_tokens.csv`.\n",
     "\n",
     "The output will be available at [fax4ever/manzoni-192](https://huggingface.co/datasets/fax4ever/manzoni-192).\n",
     "\n",
     "## Our first hyperparameter\n",
     "\n",
-    "Basically, the original csv files report a text that is supposed to be split in portions that can be passed as input to the encoder model. Typically the max number of tokens that can be passed to the encoder model is 512 (for instance this is true for BERT).\n",
-    "Now we should think about the fact that for each word of the text in general the tokenizer of the model will produce one or more tokens.\n",
-    "A strategy could be split the texts in order to use the maximum number of token possible, this is proven to be not optimal sometimes.\n",
-    "So the number of words we want to put on each input will be our first hyperparameter."
+    "The original CSV files contain text that must be split into portions that can be passed to the encoder model. Typically, the maximum number of tokens for encoder models is 512 (e.g., BERT).\n",
+    "Since each word can produce one or more tokens, a simple strategy would be to split texts to use the maximum number of tokens. This is not always optimal.\n",
+    "Therefore, the number of words per input becomes our first hyperparameter."
    ]
   },
   {
@@ -133,10 +134,9 @@
    "id": "737f2acb",
    "metadata": {},
    "source": [
-    "In the following code, we create the dataset.\n",
+    "In the following code, we create the dataset and push it to the Hub.\n",
     "\n",
-    "The result is published as a Hugging Face dataset, so standard Hugging Face API could be applied on it.\n",
-    "That is the benefit of following an open standard!"
+    "Publishing to the Hugging Face Hub allows us to use standard APIs—one benefit of open standards."
    ]
   },
   {
@@ -182,7 +182,7 @@
    "id": "a4a56efa",
    "metadata": {},
    "source": [
-    "Or we can simply load the result dataset from Hugging Face:"
+    "Alternatively, simply load the dataset from Hugging Face:"
    ]
   },
   {
@@ -200,11 +200,10 @@
    "id": "d9e4cce7",
    "metadata": {},
    "source": [
-    "## PART TWO: Tokenize the dataset\n",
+    "## Part two: Tokenize the dataset\n",
     "\n",
-    "In the tokenization process each word of each input will become one or more tokens.\n",
-    "First of all, we need to define some constants.\n",
-    "In the constants we reflect the convention we implicitly found in the csv files. The 1 denotes the end and the beginning of a new sentence, while the 0 will be used to denote all the other tokens. Special tokens denoting start and end of the input-encoding sequences will be labeled with 0. "
+    "During tokenization, each word in an input may become one or more tokens.\n",
+    "First, define some constants to reflect the convention in the CSV files. A label of 1 denotes the end (and thus beginning of a new sentence); 0 is used otherwise. Special tokens denoting start and end of sequences are labeled with 0."
    ]
   },
   {
@@ -224,26 +223,24 @@
    "id": "428c79d8",
    "metadata": {},
    "source": [
-    "We need to choose a base embedding model used to classify the tokens as 0 or 1.\n",
-    "Obviously, it means that we will use `num_labels=2`.\n",
+    "Choose a base embedding model to classify tokens as 0 or 1 (`num_labels=2`).\n",
     "\n",
-    "Since the dataset is in Italian we would like to test models,\n",
-    "that are multilingual or trained on an Italian corpus such as:\n",
+    "Since the dataset is in Italian, consider multilingual models or models trained on Italian corpora:\n",
     "\n",
-    "1. 🚀 ModernBERT-base-ita (Most Recent - Dec 2024)\n",
-    "  * `DeepMount00/ModernBERT-base-ita`\n",
+    "1. 🚀 ModernBERT-base-ita (most recent – Dec 2024)\n",
+    "   - `DeepMount00/ModernBERT-base-ita`\n",
     "\n",
-    "2. 🇮🇹 Italian BERT XXL (Most Established): \n",
-    "  * `dbmdz/bert-base-italian-xxl-cased`\n",
+    "2. 🇮🇹 Italian BERT XXL (most established)\n",
+    "   - `dbmdz/bert-base-italian-xxl-cased`\n",
     "\n",
-    "3. 🌍 XLM-RoBERTa (Best Multilingual)\n",
-    "  * `FacebookAI/xlm-roberta-base`\n",
-    "  * `FacebookAI/xlm-roberta-large`\n",
+    "3. 🌍 XLM-RoBERTa (best multilingual)\n",
+    "   - `FacebookAI/xlm-roberta-base`\n",
+    "   - `FacebookAI/xlm-roberta-large`\n",
     "\n",
-    "4. 🔬 Italian ELECTRA (Alternative Architecture): \n",
-    "  * `dbmdz/electra-base-italian-xxl-cased-discriminator`\n",
+    "4. 🔬 Italian ELECTRA (alternative architecture)\n",
+    "   - `dbmdz/electra-base-italian-xxl-cased-discriminator`\n",
     "\n",
-    "Finally, since we're not going to classify the input texts but the tokens of the input text, we use the `AutoModelForTokenClassification` from the Hugging Face APIs, instead of `AutoModelForSequenceClassification`!"
+    "Because we classify tokens rather than whole sequences, we use `AutoModelForTokenClassification` instead of `AutoModelForSequenceClassification`."
    ]
   },
   {
@@ -263,9 +260,8 @@
    "id": "049da04b",
    "metadata": {},
    "source": [
-    "The original dataset provides labels for each `word`. When we tokenize the texts we need to align the labels to the generated tokens. \n",
-    "The algorithm is pretty straightforward: we keep label 1 for all first tokens generated from a word marked as 1, we use 0 for all the other cases.\n",
-    "With this strategy we keep the same number of 1s for each input text."
+    "The original dataset provides labels for each word. When we tokenize the texts, we need to align the labels to the generated tokens.\n",
+    "We keep label 1 for the first token of any word labeled 1 and use 0 for all other tokens. This preserves the original count of 1s per input."
    ]
   },
   {
@@ -318,13 +314,11 @@
    "id": "0741f4c7",
    "metadata": {},
    "source": [
-    "## PART THREE: Training\n",
+    "## Part three: Training\n",
     "\n",
-    "The first thing to notice is the fact that the dataset is very unbalanced in terms of label distribution. Most of the labels are 0s and few 1s.\n",
-    "In this case the accuracy is not a suitable metrics to measure the quality of our classifier.\n",
-    "For instance returning always 0s will produce a high accuracy.\n",
+    "The dataset is highly imbalanced: most labels are 0 and few are 1. Accuracy is not a suitable metric here—for example, predicting only 0 yields high accuracy.\n",
     "\n",
-    "The first measure we adopted was to use the f1 as metrics to select the best model we produced among all epoch models we produced."
+    "We therefore select the best model by F1 on the validation set."
    ]
   },
   {
@@ -357,9 +351,8 @@
    "id": "e4e8b113",
    "metadata": {},
    "source": [
-    "The second measure was to use a weighted cross entropy loss as loss function to be applied to the backpropagation.\n",
-    "The function will count 30x more the errors in classification of 1s with respect to the ones on 0s. \n",
-    "The factor (30) is another hyperparameter. In this case 30 comes from the fact that 96.7% of the labels have class 0 and 3.3% have the class 1.     "
+    "We also use a weighted cross‑entropy loss during training.\n",
+    "Misclassifying class 1 (end of sentence) is penalized 30× more than class 0. The weight (30) is another hyperparameter, motivated by the label distribution (≈96.7% class 0 vs ≈3.3% class 1)."
    ]
   },
   {
@@ -390,7 +383,7 @@
    "id": "c7f53b9f",
    "metadata": {},
    "source": [
-    "For each epoch we want to compute the metrics (precision, recall, f1 and accuracy)."
+    "For each epoch, compute precision, recall, F1, and accuracy."
    ]
   },
   {
@@ -421,7 +414,7 @@
    "id": "b9fdba42",
    "metadata": {},
    "source": [
-    "Pushing all the epoch metrics and the final trained model to the Hugging Face hub. In this way the model produced can be used for inference."
+    "Push all epoch metrics and the final trained model to the Hugging Face Hub so the model can be used for inference."
    ]
   },
   {
@@ -451,9 +444,9 @@
    "id": "bc855b8f",
    "metadata": {},
    "source": [
-    "## PART FOUR: Inference\n",
+    "## Part four: Inference\n",
     "\n",
-    "We define an inference pipeline using the model deployed on the hub."
+    "Define an inference pipeline using the model deployed on the Hub."
    ]
   },
   {
@@ -473,7 +466,7 @@
    "id": "ea92a4dc",
    "metadata": {},
    "source": [
-    "And we pass any text to it:"
+    "Then pass any text to it:"
    ]
   },
   {
