--- a/sentence_splitter/colabs/sentence_splitter_generative.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_generative.ipynb
@@ -5,9 +5,9 @@
    "id": "b26351d9",
    "metadata": {},
    "source": [
-    "# Sentence Splitter using an LLM\n",
+    "# Sentence splitter using an LLM\n",
     "\n",
-    "Install the required libraries in the virtual environment:"
+    "Install the required libraries in your virtual environment:"
    ]
   },
   {
@@ -26,9 +26,9 @@
    "id": "a41fdfa7",
    "metadata": {},
    "source": [
-    "Let's import everything we need:\n",
+    "Import all required libraries.\n",
     "\n",
-    "(doing it at the beginning to fail fast in case we need something else to install in our virtual environment)"
+    "We do this first to fail fast in case additional packages need to be installed in the virtual environment."
    ]
   },
   {
@@ -53,7 +53,8 @@
    "id": "d1ef295e",
    "metadata": {},
    "source": [
-    "First of all, let's verify we support accelerator.\n",
+    "Verify that a hardware accelerator is available.\n",
+    "\n",
     "This notebook requires a GPU."
    ]
   },
@@ -72,7 +73,7 @@
    "id": "ced9aa7a",
    "metadata": {},
    "source": [
-    "Before doing everything else try to make this run as much as deterministic as possible:"
+    "Before proceeding, make the run as deterministic as possible:"
    ]
   },
   {
@@ -104,14 +105,13 @@
    "id": "35fef26b",
    "metadata": {},
    "source": [
-    "## PART ONE: Create the dataset\n",
+    "## Part one: Create the dataset\n",
     "\n",
-    "For the LLM part of the project we can start from the dataset we already created for the embedding part:\n",
-    "[fax4ever/manzoni-192](https://huggingface.co/datasets/fax4ever/manzoni-192).\n",
+    "For the LLM portion of the project, start from the dataset already created for the embedding model: [fax4ever/manzoni-192](https://huggingface.co/datasets/fax4ever/manzoni-192).\n",
     "\n",
-    "To see how this dataset is created from the `CSV` files, see the `colabs/sentence_splitter_embeddings.ipynb` notebook.\n",
+    "To see how this dataset is built from the CSV files, refer to `colabs/sentence_splitter_embeddings.ipynb`.\n",
     "\n",
-    "In this setting we don't need labels for each words, but we need to have conversations to train and to validate."
+    "In this setting we do not need labels for each word; instead, we need conversations for training and validation."
    ]
   },
   {
@@ -158,14 +158,11 @@
    "id": "4a91bb06",
    "metadata": {},
    "source": [
-    "The result is published as a Hugging Face dataset, so standard Hugging Face API could be applied on it.\n",
-    "That is the benefit of following an open standard!\n",
-    "Conversations here are expressed in terms of questions (input_text) and answers (output_text).\n",
+    "The result is published as a Hugging Face dataset, so standard Hugging Face APIs apply.\n",
     "\n",
-    "Again, the result is published as a Hugging Face dataset, so standard Hugging Face API could be applied on it.\n",
-    "That is the benefit of following an open standard!\n",
+    "Conversations are expressed as questions (`input_text`) and answers (`output_text`).\n",
     "\n",
-    "Or we can simply load the result dataset from Hugging Face:"
+    "Alternatively, simply load the dataset from Hugging Face:"
    ]
   },
   {
@@ -183,10 +180,10 @@
    "id": "bc8d0810",
    "metadata": {},
    "source": [
-    "## PART TWO: Create the prompts\n",
+    "## Part two: Create the prompts\n",
     "\n",
-    "In this phase we're going to create prompts from the series of questions / answers we have in the dataset.\n",
-    "Following an object oriented approach, we define a class to produce each prompt:"
+    "In this phase we create prompts from the question/answer pairs in the dataset.\n",
+    "Following an object-oriented approach, we define a class to produce each prompt:"
    ]
   },
   {
@@ -225,8 +222,8 @@
    "id": "3bbd0d23",
    "metadata": {},
    "source": [
-    "The `conversation` method produces a full question / answer converation, it is used for fine-tune the model.\n",
-    "the `question` method produces just a question prompt, it will be use for inference later in the notebook."
+    "The `conversation` method produces a full question/answer conversation and is used to fine‑tune the model.\n",
+    "The `question` method produces only the question prompt and will be used for inference later in the notebook."
    ]
   },
   {
@@ -254,10 +251,10 @@
    "id": "008379c9",
    "metadata": {},
    "source": [
-    "## PART THREE: Parameter-Efficient Fine-Tuning\n",
+    "## Part three: Parameter‑efficient fine‑tuning\n",
     "\n",
-    "We define here a quantized model and then we apply a LoRA (Low Rank Approximation) adapter,\n",
-    "to make the fine tuning of the LLM possible with few resources."
+    "We define a quantized model and then apply a LoRA (Low‑Rank Adaptation) adapter\n",
+    "to enable fine‑tuning the LLM with modest resources."
    ]
   },
   {
@@ -298,9 +295,9 @@
    "id": "648c2e1a",
    "metadata": {},
    "source": [
-    "We need need to put the conversations templates in the canonical form for the specific model.\n",
-    "For doing it, we will use the tokenizer of the model.\n",
-    "From this set we will create the final dataset, that will be used by the supervised fine tuning training."
+    "We need to convert the conversation templates into the canonical format for this model.\n",
+    "We will use the model’s tokenizer to do this.\n",
+    "From this, we will create the final dataset used for supervised fine‑tuning."
    ]
   },
   {
@@ -318,7 +315,7 @@
    "id": "9a2d1ee6",
    "metadata": {},
    "source": [
-    "Finally, we can train the model and save the model remotely."
+    "Finally, train the model and save it remotely."
    ]
   },
   {
@@ -363,7 +360,7 @@
    "id": "32089c83",
    "metadata": {},
    "source": [
-    "## PART FOUR: INFERENCE"
+    "## Part four: Inference"
    ]
   },
   {
