--- a/sentence_splitter/latex/nlp-homework-2.tex
+++ b/sentence_splitter/latex/nlp-homework-2.tex
@@ -12,6 +12,7 @@
 \usepackage{booktabs}
 \usepackage{numprint}
 \usepackage{listings}
+\usepackage{natbib}
 
 \title{%
 	Sentence Splitter\\
@@ -55,9 +56,14 @@ notable/unexpected) results.
 Comparative analysis of the two approaches on the validation set – which one is
 better?
 
+The \LaTeX\ related items are
+\cite{andrew2007scalable}. 
+
 \appendix
 \section{Training results Appendix}
 \label{sec:appendix1}
+
+\bibliography{custom}
 
 \end{document}
 
