--- a/sentence_splitter/latex/custom.bib
+++ b/sentence_splitter/latex/custom.bib
@@ -1,70 +1,26 @@
 % Use this file for citations not found in the ACL Anthology (contained in "anthology.bib").
 
-@book{Aho:72,
-    author  = {Alfred V. Aho and Jeffrey D. Ullman},
-    title   = {The Theory of Parsing, Translation and Compiling},
-    year    = "1972",
-    volume  = "1",
-    publisher = {Prentice-Hall},
-    address = {Englewood Cliffs, NJ}
+@misc{frohmann2024segmenttextuniversalapproach,
+	title={Segment Any Text: A Universal Approach for Robust, Efficient and Adaptable Sentence Segmentation}, 
+	author={Markus Frohmann and Igor Sterner and Ivan Vulić and Benjamin Minixhofer and Markus Schedl},
+	year={2024},
+	eprint={2406.16678},
+	archivePrefix={arXiv},
+	primaryClass={cs.CL},
+	url={https://arxiv.org/abs/2406.16678}, 
 }
 
-@book{APA:83,
-    author  = {{American Psychological Association}},
-    title   = {Publications Manual},
-    year    = "1983",
-    publisher = {American Psychological Association},
-    address = {Washington, DC}
-}
-
-@article{Chandra:81,
-	author = {Ashok K. Chandra and Dexter C. Kozen and Larry J. Stockmeyer},
-	year = "1981",
-	title = {Alternation},
-	journal = {Journal of the Association for Computing Machinery},
-	volume = "28",
-	number = "1",
-	pages = "114--133",
-	doi = "10.1145/322234.322243",
-}
-
-@inproceedings{andrew2007scalable,
-  title={Scalable training of {L1}-regularized log-linear models},
-  author={Andrew, Galen and Gao, Jianfeng},
-  booktitle={Proceedings of the 24th International Conference on Machine Learning},
-  pages={33--40},
-  year={2007},
-}
-
-@book{Gusfield:97,
-    author  = {Dan Gusfield},
-    title   = {Algorithms on Strings, Trees and Sequences},
-    year    = "1997",
-    publisher = {Cambridge University Press},
-    address = {Cambridge, UK}
-}
-
-@article{rasooli-tetrault-2015,
-    author    = {Mohammad Sadegh Rasooli and Joel R. Tetreault},
-    title     = {Yara Parser: {A} Fast and Accurate Dependency Parser},
-    journal   = {Computing Research Repository},
-    volume    = {arXiv:1503.06733},
-    year      = {2015},
-    url       = {http://arxiv.org/abs/1503.06733},
-    note    = {version 2}
-}
-
-@article{Ando2005,
-	Acmid = {1194905},
-	Author = {Ando, Rie Kubota and Zhang, Tong},
-	Issn = {1532-4435},
-	Issue_Date = {12/1/2005},
-	Journal = {Journal of Machine Learning Research},
-	Month = dec,
-	Numpages = {37},
-	Pages = {1817--1853},
-	Publisher = {JMLR.org},
-	Title = {A Framework for Learning Predictive Structures from Multiple Tasks and Unlabeled Data},
-	Volume = {6},
-	Year = {2005}
+@inproceedings{redaelli-sprugnoli-2024-sentence,
+	title = {Is Sentence Splitting a Solved Task? Experiments to the Intersection between {NLP} and {I}talian Linguistics},
+	author = {Redaelli, Arianna  and Sprugnoli, Rachele},
+	editor = {Dell'Orletta, Felice  and Lenci, Alessandro  and Montemagni, Simonetta  and Sprugnoli, Rachele},
+	booktitle = {Proceedings of the 10th Italian Conference on Computational Linguistics (CLiC-it 2024)},
+	month = dec,
+	year = "2024",
+	address = "Pisa, Italy",
+	publisher = "CEUR Workshop Proceedings",
+	url = "https://aclanthology.org/2024.clicit-1.88/",
+	pages = "813--820",
+	ISBN = "979-12-210-7060-6",
+	abstract = "Sentence splitting, that is the segmentation of the raw input text into sentences, is a fundamental step in text processing. Although it is considered a solved task for texts such as news articles and Wikipedia pages, the performance of systems can vary greatly depending on the text genre. This paper presents the evaluation of the performance of eight sentence splitting tools adopting different approaches (rule-based, supervised, semi-supervised, and unsupervised learning) on Italian 19th-century novels, a genre that has not received sufficient attention so far but which can be an interesting common ground between Natural Language Processing and Digital Humanities."
 }
