Convert list list str for metrics

--- a/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "!pip install --upgrade pip\n",
-    "!pip install torch numpy pandas datasets jupyter"
+    "!pip install torch numpy pandas datasets jupyter transformers[torch] evaluate seqeval"
    ]
   },
   {
@@ -48,7 +48,8 @@
     "from transformers import (AutoTokenizer, AutoModelForTokenClassification, DataCollatorForTokenClassification, \n",
     "                          TrainingArguments, Trainer, pipeline)\n",
     "from typing import Union, Any, Optional\n",
-    "import evaluate"
+    "import evaluate\n",
+    "from typing import Iterable, List"
    ]
   },
   {
@@ -68,6 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.environ['HF_TOKEN'] = 'PUT_YOUR_TOKEN_HERE'\n",
     "torch.cuda.is_available()"
    ]
   },
@@ -157,8 +159,8 @@
     "    return {'tokens': token_seqs, 'labels': label_seqs}\n",
     "\n",
     "\n",
-    "train = pd.read_csv(\"data/manzoni_train_tokens.csv\")  # token,label\n",
-    "validation = pd.read_csv(\"data/manzoni_dev_tokens.csv\")  # token,label\n",
+    "train = pd.read_csv(\"../data/manzoni_train_tokens.csv\")  # token,label\n",
+    "validation = pd.read_csv(\"../data/manzoni_dev_tokens.csv\")  # token,label\n",
     "\n",
     "# Group into sequences of SIZE\n",
     "train_grouped = group_into_sequences(train)\n",
@@ -396,11 +398,17 @@
     "# loaded outside the compute_metrics function to avoid re-loading it at each epoch\n",
     "metric = evaluate.load(\"seqeval\")\n",
     "\n",
+    "def map_nested_ints_to_strings(values: Iterable[Iterable[int]]) -> List[List[str]]:\n",
+    "    return [\n",
+    "        [str(item) for item in inner_iter]\n",
+    "        for inner_iter in values\n",
+    "    ]\n",
+    "\n",
     "def compute_metrics(eval_preds):\n",
     "    logits, labels = eval_preds\n",
     "    predictions = np.argmax(logits, axis=-1)\n",
     "\n",
-    "    all_metrics = metric.compute(predictions=predictions, references=labels)\n",
+    "    all_metrics = metric.compute(predictions=map_nested_ints_to_strings(predictions), references=map_nested_ints_to_strings(labels))\n",
     "    return {\n",
     "        \"precision\": all_metrics[\"overall_precision\"],\n",
     "        \"recall\": all_metrics[\"overall_recall\"],\n",
