Simplify metrics computation

--- a/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
@@ -395,26 +395,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# loaded outside the compute_metrics function to avoid re-loading it at each epoch\n",
-    "metric = evaluate.load(\"seqeval\")\n",
-    "\n",
-    "def map_nested_ints_to_strings(values: Iterable[Iterable[int]]) -> List[List[str]]:\n",
-    "    return [\n",
-    "        [str(item) for item in inner_iter]\n",
-    "        for inner_iter in values\n",
-    "    ]\n",
-    "\n",
     "def compute_metrics(eval_preds):\n",
+    "    metric = evaluate.load(\"glue\", \"mrpc\")\n",
     "    logits, labels = eval_preds\n",
     "    predictions = np.argmax(logits, axis=-1)\n",
-    "\n",
-    "    all_metrics = metric.compute(predictions=map_nested_ints_to_strings(predictions), references=map_nested_ints_to_strings(labels))\n",
-    "    return {\n",
-    "        \"precision\": all_metrics[\"overall_precision\"],\n",
-    "        \"recall\": all_metrics[\"overall_recall\"],\n",
-    "        \"f1\": all_metrics[\"overall_f1\"],\n",
-    "        \"accuracy\": all_metrics[\"overall_accuracy\"],\n",
-    "    }"
+    "    return metric.compute(predictions=predictions, references=labels)"
    ]
   },
   {
