--- a/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
@@ -49,7 +49,7 @@
     "                          TrainingArguments, Trainer, pipeline)\n",
     "from typing import Union, Any, Optional\n",
     "import evaluate\n",
-    "from typing import Iterable, List"
+    "from typing import Iterable"
    ]
   },
   {
@@ -385,7 +385,7 @@
    "id": "c7f53b9f",
    "metadata": {},
    "source": [
-    "For each epoch, compute precision, recall, F1, and accuracy."
+    "For each epoch, compute F1."
    ]
   },
   {
@@ -395,11 +395,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def compute_f1_metric(predictions: Iterable[Iterable], references: Iterable[Iterable]) -> float:\n",
+    "    metric = evaluate.load(\"f1\", average=\"binary\")\n",
+    "\n",
+    "    assert len(predictions) == len(references)\n",
+    "    for i, prediction_batch in enumerate(predictions):\n",
+    "        reference_batch = references[i]\n",
+    "        \n",
+    "        prediction_valid_batch = []\n",
+    "        reference_valid_batch = []\n",
+    "        trailing = False\n",
+    "\n",
+    "        assert len(prediction_batch) == len(reference_batch)\n",
+    "        for prediction, reference in zip(prediction_batch, reference_batch):\n",
+    "            if reference == -100 or reference == '-100':\n",
+    "                trailing = True\n",
+    "                continue\n",
+    "            else:\n",
+    "                assert not trailing\n",
+    "                reference_valid_batch.append(reference)\n",
+    "                prediction_valid_batch.append(prediction)\n",
+    "\n",
+    "        metric.add_batch(predictions=prediction_valid_batch, references=reference_valid_batch)\n",
+    "    return metric.compute()\n",
+    "\n",
     "def compute_metrics(eval_preds):\n",
-    "    metric = evaluate.load(\"glue\", \"mrpc\")\n",
     "    logits, labels = eval_preds\n",
     "    predictions = np.argmax(logits, axis=-1)\n",
-    "    return metric.compute(predictions=predictions, references=labels)"
+    "\n",
+    "    return compute_f1_metric(predictions=predictions, references=labels)"
    ]
   },
   {
