Start out of domain evaluation

--- a/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "!pip install --upgrade pip\n",
-    "!pip install torch numpy pandas datasets jupyter transformers[torch] evaluate seqeval"
+    "!pip install torch numpy pandas datasets jupyter transformers[torch] evaluate"
    ]
   },
   {
