Finalize OOD eval embeddings

--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_eval.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_eval.ipynb
@@ -7,6 +7,11 @@
    "source": [
     "# Sentence Splitter: Out of Domain Evaluation\n",
     "\n",
+    "In this notebook we will evaluate the models we produced for sentence splitting,\n",
+    "on the same domain (Quarantana - Manzoni) and out of domain (on novels from different authors of the same time).\n",
+    "We copied with a little adaptation from the golden splitting novels from [Sentence Splitting Manzoni annotated datset](https://github.com/RacheleSprugnoli/Sentence_Splitting_Manzoni/tree/main/test-novels).\n",
+    "\n",
+    "\n",
     "Install the required libraries in your virtual environment:"
    ]
   },
@@ -18,7 +23,7 @@
    "outputs": [],
    "source": [
     "!pip install --upgrade pip\n",
-    "!pip install transformers urllib3"
+    "!pip install transformers"
    ]
   },
   {
@@ -36,9 +41,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import evaluate\n",
     "from transformers import pipeline\n",
-    "import urllib3"
+    "from pathlib import Path\n",
+    "import random\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29e8e03e",
+   "metadata": {},
+   "source": [
+    "Before proceeding, make the run as deterministic as possible:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "397cfa88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def set_seed(seed=777, total_determinism=False):\n",
+    "    seed = seed\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    torch.backends.cudnn.benchmark = False\n",
+    "    if total_determinism:\n",
+    "        torch.use_deterministic_algorithms(True)\n",
+    "    random.seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    if torch.cuda.is_available():\n",
+    "        torch.cuda.manual_seed(seed)\n",
+    "        torch.cuda.manual_seed_all(seed)\n",
+    "set_seed() # Set the seed for reproducibility -- use_deterministic_algorithms can make training slower :("
    ]
   },
   {
@@ -46,7 +84,7 @@
    "id": "e253f02c",
    "metadata": {},
    "source": [
-    "## Part One: Eval Embedding base models"
+    "We need first of all produce labels from a pieces of gold-annotated splitted "
    ]
   },
   {
