Fix generative splitter colab

--- a/sentence_splitter/colabs/sentence_splitter_generative.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_generative.ipynb
@@ -42,10 +42,11 @@
     "import random\n",
     "import numpy as np\n",
     "import torch\n",
-    "from datasets import load_dataset\n",
+    "from datasets import load_dataset, Dataset\n",
     "from transformers import TextStreamer\n",
     "from unsloth import FastLanguageModel\n",
-    "from trl import SFTTrainer, SFTConfig"
+    "from trl import SFTTrainer, SFTConfig\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -65,6 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.environ['HF_TOKEN'] = 'PUT_YOUR_TOKEN_HERE'\n",
     "torch.cuda.is_available()"
    ]
   },
@@ -265,6 +267,7 @@
    "outputs": [],
    "source": [
     "LLM_MODEL = \"unsloth/Qwen3-4B\"\n",
+    "BASE_MODEL_NAME = \"Qwen3-4B\"\n",
     "\n",
     "model, tokenizer = FastLanguageModel.from_pretrained(\n",
     "    model_name = LLM_MODEL,  # you can use the 14B here!\n",
@@ -307,7 +310,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chat_dataset = tokenizer.apply_chat_template(conversations, tokenize = False)"
+    "chat_dataset = conversations.map(lambda x: {\"formatted_chat\": tokenizer.apply_chat_template(x[\"conversations\"], tokenize=False)})\n",
+    "\n",
+    "train_formatted_chats = pd.Series(chat_dataset['train']['formatted_chat'])\n",
+    "train_formatted_chats.name = \"text\"\n",
+    "train_dataset = Dataset.from_pandas(pd.DataFrame(train_formatted_chats))\n",
+    "\n",
+    "validation_formatted_chats = pd.Series(chat_dataset['validation']['formatted_chat'])\n",
+    "validation_formatted_chats.name = \"text\"\n",
+    "validation_dataset = Dataset.from_pandas(pd.DataFrame(train_formatted_chats))"
    ]
   },
   {
@@ -328,14 +339,13 @@
     "trainer = SFTTrainer(\n",
     "    model = model,\n",
     "    tokenizer = tokenizer,\n",
-    "    train_dataset = chat_dataset[\"train\"],\n",
-    "    eval_dataset = chat_dataset[\"validation\"],\n",
+    "    train_dataset = train_dataset,\n",
+    "    eval_dataset = validation_dataset,\n",
     "    args = SFTConfig(\n",
-    "        dataset_text_field = \"conversations\",\n",
-    "        per_device_train_batch_size = 2,\n",
+    "        dataset_text_field = \"text\",\n",
     "        gradient_accumulation_steps = 4, # Use GA to mimic batch size!\n",
     "        warmup_steps = 5,  # ~500-2000 or 10-20% of the total steps\n",
-    "        # num_train_epochs = 1, # Set this for 1 full training run.\n",
+    "        num_train_epochs = 10,\n",
     "        max_steps = 30,\n",
     "        learning_rate = 2e-4, # Reduce to 2e-5 for long training runs\n",
     "        logging_steps = 1,\n",
@@ -345,10 +355,27 @@
     "        seed = 3407,\n",
     "        report_to = \"none\", # Use this for WandB etc\n",
     "    ),\n",
-    ")\n",
-    "trainer.train()\n",
-    "\n",
-    "trained_model_name = LLM_MODEL + \"-sentence-splitter\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "394a92c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfb5bea4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trained_model_name = BASE_MODEL_NAME + \"-sentence-splitter\"\n",
     "model_checkpoint = \"fax4ever/\" + trained_model_name\n",
     "\n",
     "model.push_to_hub(model_checkpoint, token=os.environ['HF_TOKEN'])\n",
